--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
-*{
-  padding: 0 ;
-  margin: 0 ;
+* {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
-  font-family: "VT323" ,monospace;
+  font-family: "VT323", monospace;
 }
 
-
-.main{
+.main {
   height: 100vh;
-  background-color: #457B9D;
+  position: relative;
+  background: url("../public/images/noise.gif");
+}
+
+.layer {
+  background-color: rgba(69, 123, 157, 0.95);
+  /* background-color: rgba(248, 247, 216, 0.7); */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
